# SIMBAParser

./: CMakeLists.txt  IO_Mapper.cpp  PCAP_JSON.hpp  PCAP_Parser.cpp  README.md  SIMBA_Decoder.cpp  SIMBA_Decoder.hpp  SIMBA_JSON.hpp  main.cpp
src/: IO_Mapper.hpp  PCAP_Parser.cpp  PCAP_Parser.hpp  PCAP_Schema.hpp  SIMBA_Decoder.cpp  SIMBA_JSON.hpp  SIMBA_Schema.hpp  main.cpp
